Update Korean translations

--- a/util/src/main/i18n/translations/match_ko_KR.properties
+++ b/util/src/main/i18n/translations/match_ko_KR.properties
@@ -18,7 +18,7 @@ match.info.you = 당신
 # {0} = team name
 match.balanceTeams = 만약 {0}에 사람이 계속 몰려있으면, 팀이 자동조정 될 것입니다
 
-match.maxBuildHeight = 블록 설치가 가능한 최고 높이에 도달하였습니다
+match.maxBuildHeight = 블록 설치가 가능한 최고 높이에 도달했습니다
 
 match.outOfBounds = 경기장을 나가실 수 없습니다
 
@@ -69,7 +69,7 @@ match.stats.killstreak.concise = 최고 연속 킬\: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
-match.stats.deaths = 죽은 횟수\: {1} - {0}
+match.stats.deaths = 데스\: {1} - {0}
 
 # {0} = a player name
 # {1} = an amount of blocks
@@ -158,7 +158,7 @@ broadcast.gameOver = 경기가 끝났습니다\!
 
 broadcast.gameOver.teamWon = 당신의 팀이 승리했습니다\!
 
-broadcast.gameOver.teamLost = 당신의 팀이 패배하였습니다
+broadcast.gameOver.teamLost = 당신의 팀이 패배했습니다
 
 # {0} = winning team name (e.g. singular names, "Red Team" or "Notch")
 broadcast.gameOver.teamWinner = {0} 승리\!
