Update Russian translations

--- a/util/src/main/i18n/translations/match_ru_RU.properties
+++ b/util/src/main/i18n/translations/match_ru_RU.properties
@@ -16,7 +16,7 @@ match.info.score = Счёт
 
 match.info.you = Вы
 # {0} = team name
-match.balanceTeams = Команды будут авто сбалансированной, если {0} будет с накоплением
+match.balanceTeams = Команды будут автоматически сбалансированы, если у {0} будет преимущество
 
 match.maxBuildHeight = Вы достигли максимальной высоты для строительства
 
@@ -170,7 +170,7 @@ broadcast.gameOver.teamWinners = {0} победил\!
 countdown.matchStart = Матч начнётся через {0}
 
 # {0} = duration
-countdown.huddleEnd = Распределение закончится через {0}
+countdown.huddleEnd = Фаза планирования закончится через {0}
 
 # {0} = duration
 countdown.restart = Перезапуск сервера через {0}
