Update Swedish translations

--- a/util/src/main/i18n/translations/match_sv_SE.properties
+++ b/util/src/main/i18n/translations/match_sv_SE.properties
@@ -54,6 +54,7 @@ match.stats = Dödsantal\: {0}  |  Dödslänga\: {1}  |  Dödsfall\: {2}  |  K/D
 # {0} = number of kills
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats.concise = Dödat\: {0}  Dött\: {1}  K/D\: {2}
 
 # {0} = a player name
 # {1} = an amount of kills(number)
@@ -64,6 +65,7 @@ match.stats.kills = Dödade\: {1} av {0}
 match.stats.killstreak = Dödslänga\: {1} av {0}
 
 # {0} = a killstreak(number)
+match.stats.killstreak.concise = Bästa dödsserie\: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
@@ -75,25 +77,34 @@ match.stats.bowshot = Längsta skott\: {1} block av {0}
 
 # {0} = a player name
 # {1} = an amount of damage
+match.stats.damage = Skada\: {1} av {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.dealt = Skada delat (Pilbåge)\: {0} ({1})
 
 # {0} = an amount of damage
+match.stats.damage.received = Skada mottagen\: {0}
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
 # {2} = accuracy represented as a percentage
+match.stats.bow = Pilbågeträffar\: {0} / {1} ({2})
 
 
 # {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Flaggor fångade\: {0}
 
 # {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Längsta flagga hållen\: {0}
 
 # {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Monumentblock brutna\: {0}
 
 # {0} = a player name
+match.stats.team = {0}s statistik
 
+match.stats.title = Matchstatistik
 
 match.stats.you = Din statistik
 
