--- a/util/src/main/i18n/translations/match_es_MX.properties
+++ b/util/src/main/i18n/translations/match_es_MX.properties
@@ -54,7 +54,7 @@ match.stats = Bajas\: {0}  |  Racha de bajas\: {1}  | Muertes\: {2}  |  K/D\: {3
 # {0} = number of kills
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
-match.stats.concise = Bajas\: {0}  Muertes\: {1}  K/D\: {2}
+match.stats.concise = Kills\: {0} Muertes\: {1} K/D\: {2}
 
 # {0} = a player name
 # {1} = an amount of kills(number)
@@ -65,7 +65,7 @@ match.stats.kills = Bajas\: {1} por {0}
 match.stats.killstreak = Racha de bajas\: {1} por {0}
 
 # {0} = a killstreak(number)
-match.stats.killstreak.concise = Mejor racha de bajas\: {0}
+match.stats.killstreak.concise = Mejor Killstreak\: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
@@ -77,9 +77,11 @@ match.stats.bowshot = Disparo más lejano\: {1} bloques de {0}
 
 # {0} = a player name
 # {1} = an amount of damage
+match.stats.damage = Daño\: {1} por {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.dealt = Daño infligido (Arco)\: {0} ({1})
 
 # {0} = an amount of damage
 match.stats.damage.received = Daño recibido\: {0}
@@ -87,16 +89,22 @@ match.stats.damage.received = Daño recibido\: {0}
 # {0} = number of arrows hit
 # {1} = number of arrows shot
 # {2} = accuracy represented as a percentage
+match.stats.bow = Aciertos con arco\: {0} / {1} ({2})
 
 
 # {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Banderas capturadas\: {0}
 
 # {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Captura de bandera más larga\: {0}
 
 # {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Bloques rotos del monumento\: {0}
 
 # {0} = a player name
+match.stats.team = Estadísticas de {0}
 
+match.stats.title = Estadísticas de la partida
 
 match.stats.you = Tus estadísticas
 
