Update French translations

--- a/util/src/main/i18n/translations/misc_fr_FR.properties
+++ b/util/src/main/i18n/translations/misc_fr_FR.properties
@@ -114,7 +114,9 @@ misc.to = À
 
 misc.from = De
 
+misc.nextPage = Page suivante
 
+misc.previousPage = Page précédente
 
 misc.thankYou = Merci.
 
