--- a/util/src/main/i18n/translations/misc_ja_JP.properties
+++ b/util/src/main/i18n/translations/misc_ja_JP.properties
@@ -16,7 +16,7 @@ misc.list.middle = {0}、{1}
 # end of a list of 3 or more items
 # {0} = second-to-last item
 # {1} = last item
-misc.list.end = {0}、および {1}
+misc.list.end = {0}、 {1}
 
 # {0} = "1"
 misc.millisecond = {0} ミリ秒
@@ -54,32 +54,39 @@ misc.timeAgo = {0} 前
 # {0} = duration (e.g. "1:00" for 1 minute left, "15:25" for 15 minutes and 25 seconds left)
 misc.timeRemaining = 残り時間\: {0}
 
+misc.overtime = 延長戦\: {0}
 
 # {0} = player name
-misc.createdBy = 制作\:{0}
+misc.createdBy = 制作者\: {0}
 
 # {0} = player name
+misc.by = by {0}
 
 # {0} = player name
+misc.and = と {0}
 
 # {0} = some map or gamemode name
+misc.playing = {0} をプレイ中
 
 # {0} = something made by {1} (e.g. a map name)
 # {1} = player name
-misc.authorship = {0} 作{1}
+misc.authorship = {0} by {1}
 
 # {0} = something belonging to {1} (e.g. an item name)
 # {1} = player name
-misc.ownership = {0}の{1}
+misc.ownership = {0} の {1}
 
 # {0} = "1"
-misc.point = 1 ポイント
+misc.point = {0} ポイント
 
 # {0} = number of points
+misc.points = {0} ポイント
 
 # {0} = "1"
+misc.life = 残機数\: {0}
 
 # {0} = number of lives
+misc.lives = 残り残機\: {0}
 
 # {0} = number of blocks
 misc.blocks = {0} ブロック
@@ -90,18 +97,26 @@ misc.team = チーム
 # A choice with two options (e.g. 1 hour or 5 matches)
 # {0} = the first option
 # {1} = the second option
+misc.or = {0} または {1}
 
 # do not translate, keep as-is
+misc.snowman = ☃
 
 misc.unknown = 不明
 
 misc.console = コンソール
 
+misc.on = オン
 
+misc.off = オフ
 
+misc.to = To
 
+misc.from = から
 
+misc.nextPage = 次のページ
 
+misc.previousPage = 前のページ
 
 misc.thankYou = ありがとう。
 
@@ -113,50 +128,78 @@ misc.alert = アラート
 
 misc.warning = 警告
 
+misc.top = 上
 
+misc.bottom = 下
 
+misc.front = 前
 
+misc.back = 後
 
+misc.rear = 後ろ
 
+misc.left = 左
 
+misc.right = 右
 
+misc.center = 中央
 
+misc.north = 北
 
+misc.south = 南
 
+misc.east = 東
 
+misc.west = 西
 
 # {0} = player name
 misc.teleportTo = {0} へテレポート
 
 misc.teleportTool = テレポート ツール
 
+misc.editWand = 地形編集ハンド
 
 # {0} = player name
 misc.join = {0} が参加しました
 
 # {0} = player name
+misc.join.quiet = {0} がこっそりと参加しました
 
 # {0} = player name
 misc.leave = {0} が退出しました
 
 # {0} = player name
+misc.leave.quiet = {0} がこっそりと退出しました
 
 misc.incorrectWorld = エラーが発生しました。再度ログインし直してください。
 
+misc.serverFull = 現在サーバーは満員です。プレミアムにアップグレードすると参加できるようになります。
 
 misc.serverRestart = サーバー再起動！
 
+type.int = 整数
 
+type.float = 小数
 
+type.boolean = 真か偽か
 
+type.duration = 期間
 
+type.vector = (x,y,z) ベクトル
 
+type.chunk = (x,z) ベクトル
 
+type.version = (x.y.z) バージョン
 
 type.gamemode = ゲームモード
 
+type.component = 文字
 
+type.uri = url
 
+type.team = チーム
 
+type.settingkey = 設定
 
 # {0} = a URL (e.g. "https://oc.tc")
+chat.clickLink = 詳細\: {0}
