Update Korean translations

--- a/util/src/main/i18n/translations/misc_ko_KR.properties
+++ b/util/src/main/i18n/translations/misc_ko_KR.properties
@@ -160,10 +160,10 @@ misc.teleportTool = 텔레포트 도구
 misc.editWand = 편집 마술봉
 
 # {0} = player name
-misc.join = {0}이(가) 게임에 참여하였습니다
+misc.join = {0}이(가) 게임에 참여했습니다
 
 # {0} = player name
-misc.join.quiet = {0}이(가) 게임에 조용히 참여하였습니다
+misc.join.quiet = {0}이(가) 게임에 조용히 참여했습니다
 
 # {0} = player name
 misc.leave = {0}이(가) 게임을 나갔습니다
