Update German translations

--- a/util/src/main/i18n/translations/match_de_DE.properties
+++ b/util/src/main/i18n/translations/match_de_DE.properties
@@ -65,6 +65,7 @@ match.stats.kills = Getötet\: {1} von {0}
 match.stats.killstreak = Hintereinander getötet\: {1} von {0}
 
 # {0} = a killstreak(number)
+match.stats.killstreak.concise = Hintereinander getötet (Rekord)\: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
@@ -80,19 +81,25 @@ match.stats.damage = Schaden\: {1} von {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.dealt = Schaden ausgeteilt (Bogen)\: {0} ({1})
 
 # {0} = an amount of damage
+match.stats.damage.received = Schaden bekommen\: {0}
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
 # {2} = accuracy represented as a percentage
+match.stats.bow = Bogen-Treffer\: {0} / {1} ({2})
 
 
 # {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Flaggen erobert\: {0}
 
 # {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Längster Flaggen-Besitz\: {0}
 
 # {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Monument-Blöcke zerstört\: {0}
 
 # {0} = a player name
 match.stats.team = {0}s Statistiken
