--- a/util/src/main/i18n/translations/map_ja_JP.properties
+++ b/util/src/main/i18n/translations/map_ja_JP.properties
@@ -1,7 +1,8 @@
 map.title = 読み込まれているマップ
 
-map.notFound = クエリに一致するマップがありません。
+map.notFound = 条件に一致するマップがありません。
 
+map.info.edition = エディション
 
 map.info.gamemode.singular = ゲームモード
 
@@ -9,7 +10,9 @@ map.info.gamemode.plural = ゲームモード
 
 map.info.genre = ジャンル：
 
+map.info.tags = タグ
 
+map.info.created = 作成
 
 map.info.author.singular = 製作者
 
@@ -19,87 +22,132 @@ map.info.contributors = 協力者
 
 map.info.rules = ルール
 
+map.info.playerLimit = 最大プレイヤー
 
+map.info.playerLimit.vs = vs
 
+map.info.xml = XML
 
 map.info.xml.tip = このマップを制御するxmlを表示
 
+map.info.proto = Proto
 
+map.info.source = ソース
 
 map.info.folder = フォルダ
 
+map.info.pools = プール
 
 map.info.objective = 目標
 
 # {0} = name of a maptag (e.g "#tnt" or "#controlpoint")
+map.info.mapTag.hover = クリックして {0} つのマップを表示
 
 # {0} = map name
 map.nextMap = 次のマップ\: {0}
 
 # {0} = player name (who set the map)
 # {1} = map name
+map.setNext = {0} が {1} を次のマップに設定しました
 
 map.setNext.confirm = 再起動がキューに入ってる場合は、次のマップを設定することはできません。 オーバーライドするには -f を使用してください。
 
 # {0} = player name (who unset the map)
 # {1} = name of map that was unset
+map.setNext.revert = {0} は {1} を次のマップから削除しました。
 
+map.noNextMap = 次に設定されているマップはありません。
 
+map.info.commandHint = {0} を入力して詳細を表示
 
 # {0} = map name
 # {1} = a duration (e.g. "30 seconds")
+map.cycleMap = {1} 秒後に {0} に代わります
 
 # {0} = map name
+map.cycledMap = 次のマップ\: {0}
 
 # {0} = a duration (e.g. "1 minute")
+map.cycle = {0}秒後に変わります
 
+map.cycled = 切り替え完了
 
 map.protectPortal = この領域を妨害することはできません
 
 # {0} = map pool name (e.g. "Mega")
+pool.change = マッププールを {0} に設定しました。現在のプレイヤー数に合わせて調整します。
 
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = player name
+pool.change.force = {1} がマッププールを {0} に設定しました
 
 # {0} = map pool name (e.g. "Mega")
 # {1} = a duration (e.g. "2 hours")
 # {2} = player name
+pool.change.forceTimed = {2} がマッププールを {1} の間 {0} にするように設定しました
 
 # {0} = number of positions
+pool.skip = {0} 回スキップしました
 
+pool.skip.negative = スキップ回数に負の値は設定できません
 
+pool.name = マッププール
 
+pool.title = マッププール
 
+pool.noPoolMatch = 指定されたマップが見つかりません
 
+pool.noDynamic = Dynamic poolが見つかりませんでした
 
+pool.noRotation = 現在使用されているローテーションが存在しません
 
+pool.noMapPools = 読み込まれたマッププールがありません
 
 # {0} = map pool name (e.g. "Mega")
+pool.matching = {0} プールは既に設定されています
 
+pool.mapPoolsDisabled = 現在マッププールは無効化されています
 
+vote.noVote = 現在実施中の投票はありません
 
+vote.title.map = マップ投票
 
+vote.header.map = プレイしたいマップをクリックしてください\:
 
 # {0} = option name (e.g. "Airship Battle")
+vote.for = {0} に投票しました
 
 # {0} = option name (e.g. "Airship Battle")
+vote.against = {0} に反対票を投じました
 
 # {0} = option name (e.g. "Airship Battle")
+vote.abstain = {0} への投票を削除しました
 
+vote.disabled = 投票は現在無効化されています
 
+vote.modify.disallow = 現在投票の編集は出来ません
 
 # {0} = player name (who added the map)
 # {1} = map name 
+vote.add = {0} が {1} を次の投票に追加しました
 
 # {0} = player name (who removed the map)
 # {1} = map name 
+vote.remove = {0} は {1} を投票から外しました
 
+vote.limit = 投票に追加できるマップ数の上限に達しました
 
+vote.title.selection = 選んだマップ
 
 # {0} = player name (who toggled mode)
 # {1} = mode name
+vote.toggle = {0} が投票モードを {1} に設定しました
 
+vote.mode.replace = 置換
 
+vote.mode.create = 作成
 
+vote.mode.hover = クリックして投票モードを切り替える
 
+vote.noMapsFound = 投票から削除できるマップがありません
