Update Korean translations

--- a/util/src/main/i18n/translations/map_ko_KR.properties
+++ b/util/src/main/i18n/translations/map_ko_KR.properties
@@ -116,10 +116,10 @@ vote.title.map = 맵 투표
 vote.header.map = 플레이하고 싶은 맵을 모두 클릭하세요\:
 
 # {0} = option name (e.g. "Airship Battle")
-vote.for = {0}에 투표하였습니다
+vote.for = {0}에 투표했습니다
 
 # {0} = option name (e.g. "Airship Battle")
-vote.against = {0}에 반대 투표를 하였습니다
+vote.against = {0}에 반대 투표를 했습니다
 
 # {0} = option name (e.g. "Airship Battle")
 vote.abstain = {0}에 대한 투표를 취소했습니다
