Update Spanish translations

--- a/util/src/main/i18n/translations/match_es_ES.properties
+++ b/util/src/main/i18n/translations/match_es_ES.properties
@@ -77,9 +77,11 @@ match.stats.bowshot = Disparo más largo\: {1} bloques de {0}
 
 # {0} = a player name
 # {1} = an amount of damage
+match.stats.damage = Daño\: {1} por {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.dealt = Daño infligido (Arco)\: {0} ({1})
 
 # {0} = an amount of damage
 match.stats.damage.received = Daño recibido\: {0}
@@ -87,16 +89,22 @@ match.stats.damage.received = Daño recibido\: {0}
 # {0} = number of arrows hit
 # {1} = number of arrows shot
 # {2} = accuracy represented as a percentage
+match.stats.bow = Aciertos con arco\: {0} / {1} ({2})
 
 
 # {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Banderas capturadas\: {0}
 
 # {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Captura de bandera más larga\: {0}
 
 # {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Bloques rotos del monumento\: {0}
 
 # {0} = a player name
+match.stats.team = Estadísticas de {0}
 
+match.stats.title = Estadísticas de la partida
 
 match.stats.you = Tus estadísticas
 
