Update Korean translations

--- a/util/src/main/i18n/translations/ui_ko_KR.properties
+++ b/util/src/main/i18n/translations/ui_ko_KR.properties
@@ -53,7 +53,7 @@ setting.options = 가능한 옵션\: {0}
 # {0} = name of a setting
 # {1} = old setting value (e.g. "off")
 # {2} = new setting value (e.g. "on")
-setting.set = 당신의 {0} 설정을 {1}에서 {2}(으)로 변경하였습니다
+setting.set = 당신의 {0} 설정을 {1}에서 {2}(으)로 변경했습니다
 
 preview.noPotionEffects = 포션 효과가 없습니다
 
