Update German translations

--- a/util/src/main/i18n/translations/ui_de_DE.properties
+++ b/util/src/main/i18n/translations/ui_de_DE.properties
@@ -84,9 +84,9 @@ preview.closeButton = Schließen
 
 picker.title.teamClass = Team- & Klassen-Auswahl
 
-picker.title.team = Teamauswahl
+picker.title.team = Team-Auswahl
 
-picker.title.class = Klassenauswahl
+picker.title.class = Klassen-Auswahl
 
 picker.title.ffa = Spiel beitreten
 
@@ -102,7 +102,7 @@ picker.windowTitle.team = Wähle dein Team
 
 picker.windowTitle.class = Wähle deine Klasse
 
-picker.autoJoin.displayName = Automatische Teamauswahl
+picker.autoJoin.displayName = Automatische Team-Auswahl
 
 picker.autoJoin.tooltip = Du trittst dem Team mit den wenigsten Spielern bei
 
