Update Japanese translations

--- a/util/src/main/i18n/translations/ui_ja_JP.properties
+++ b/util/src/main/i18n/translations/ui_ja_JP.properties
@@ -1,37 +1,59 @@
+setting.title = 観戦者用ツール
 
+setting.displayName = ツール
 
+setting.lore = 右クリックでツールメニューを開く
 
+setting.flyspeed = 飛行速度
 
 # {0} = speed type (e.g. "Normal", "Fast", "Faster")
+setting.flyspeed.lore = 現在のスピード\: {0}
 
+setting.flyspeed.normal = 標準
 
+setting.flyspeed.fast = 速い
 
+setting.flyspeed.faster = より速く
 
+setting.flyspeed.hyperspeed = ハイパースピード
 
 setting.gamemode = ゲームモード
 
 # {0} = gamemode name (e.g. "Creative" or "Spectator")
+setting.gamemode.lore = 現在のゲームモード\: {0}
 
 # {0} = "/tools"
+setting.gamemode.warning = {0} でゲームモードを切り替える
 
+setting.gamemode.hover = クリックでツールメニューを開く
 
+setting.nightvision = 暗視
 
 # {0} = status (e.g. "On" or "Off")
+setting.nightvision.lore = 状態\:{0}
 
+setting.visibility = 可視
 
 # {0} = status (e.g. "Shown" or "Hidden")
+setting.visibility.lore = 観戦者を表示\: {0}
 
+setting.visibility.shown = 表示
 
+setting.visibility.hidden = 非表示
 
+setting.observersOnly = このコマンドは観戦状態でしか使えません。
 
 # {0} = name of a setting (e.g. "chat", "sounds", "picker")
 # {1} = current setting value (e.g. "on", "off")
+setting.get = {0} は現在 {1} として設定されています。
 
 # {0} = list of setting values (e.g "on, off")
+setting.options = 選択肢\: {0}
 
 # {0} = name of a setting
 # {1} = old setting value (e.g. "off")
 # {2} = new setting value (e.g. "on")
+setting.set = {0} を {1} から {2} に変更しました。
 
 preview.noPotionEffects = ポーションの効果はありません。
 
@@ -43,19 +65,24 @@ preview.hungerLevel = 満腹度
 
 preview.healthLevel = HP
 
+preview.specialAbilities = 特殊能力
 
+preview.flying = 飛行
 
+preview.doubleJump = 二段ジャンプ
 
 # {0} = amount of knockback resistance (number)
 preview.knockbackResistance = ノックバック耐性（{0}%）
 
 # {0} = amount of knockback reduction (number)
+preview.knockbackReduction = ノックバック抑制 ({0}%)
 
 # {0} = amount of walking speed (number)
 preview.walkSpeed = 移動速度（{0}倍）
 
 preview.closeButton = 閉じる
 
+picker.title.teamClass = チーム / クラスを選択
 
 picker.title.team = チームの選択
 
@@ -63,9 +90,11 @@ picker.title.class = クラスの選択
 
 picker.title.ffa = 試合に参加
 
+picker.title.leave = 試合を抜ける
 
-picker.tooltip = この本を使い、簡単にチームを選択しましょう！
+picker.tooltip = この本で試合に参加しましょう\!
 
+picker.tooltipObserver = 観戦者に加わる
 
 picker.windowTitle.teamClass = チーム/クラスを選択してください
 
@@ -81,5 +110,6 @@ picker.capacity = チームが満員のため、参加できません。
 
 picker.clickToJoin = あなたの好きなチームを選んで参加することができます\!
 
+picker.clickToRejoin = クリックしてチームに再参加しましょう\!
 
 picker.noPermissions = プレミアムユーザーになると、自分のチームを選ぶことができます！
