Update Swedish translations

--- a/util/src/main/i18n/translations/misc_sv_SE.properties
+++ b/util/src/main/i18n/translations/misc_sv_SE.properties
@@ -114,7 +114,9 @@ misc.to = Till
 
 misc.from = Från
 
+misc.nextPage = Nästa sida
 
+misc.previousPage = Föregående sida
 
 misc.thankYou = Tack.
 
