Update Japanese translations

--- a/util/src/main/i18n/translations/moderation_ja_JP.properties
+++ b/util/src/main/i18n/translations/moderation_ja_JP.properties
@@ -1,68 +1,103 @@
 # TODO: Rename some keys and move others to misc
 
 # {0} = Type of punishment
+moderation.type = タイプ\: {0}
 
+moderation.type.kick = キック
 
+moderation.type.mute = ミュート
 
+moderation.type.warn = 警告
 
+moderation.type.ban = 無期限BAN
 
 # {0} = duration of the ban (e.g. "7 days")
+moderation.type.temp_ban = {0} Ban
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.name = 現在オンラインのスタッフ ({0}人)\: {1}
+moderation.staff.empty = 現在オンラインのスタッフはいません \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
+moderation.screen.kick = あなたはキックされました。理由\:{0}
 
 # {0} = punishment reason
+moderation.screen.ban = あなたは無期限Banされました。理由\:{0}
 
 # {0} = punishment reason
+moderation.screen.temp_ban = あなたはBanされました。理由\:{0}
 
 # {0} = a http link (e.g. "https://example.com/rules")
+moderation.screen.rulesLink = 再度、ルールを確認してください\: {0}
 
 # {0} = staff member name (e.g. "Notch")
+moderation.screen.signoff = 処罰者\: {0}
 
 # {0} = duration (e.g. "2 weeks")
+moderation.screen.expires = 期限\: {0}
 
 # {0} = mute reason
+moderation.mute.message = あなたは現在ミュートされています 理由\: {0}
 
+moderation.mute.list = ミュート中のプレイヤー
 
-
-# {0} = player name
-
-# {0} = player name
-
-# {0} = player name
+moderation.mute.none = オンラインになっているミュート中のプレイヤーはいません。
 
 # {0} = player name
-
-
-# {0} = player name
-
-
+moderation.mute.hover = クリックして {0} のミュートを解除
 
 # {0} = player name
-
+moderation.mute.target = {0} はミュートされています。メッセージの送受信は出来ません。
 
 # {0} = player name
+moderation.mute.existing = {0} は既にミュートされています。
+
+# {0} = player name
+moderation.unmute.sender = {0} のミュートを解除しました。
+
+moderation.unmute.target = あなたのミュートは解除されました。メッセージを送信できます。
+
+# {0} = player name
+moderation.unmute.none = {0} はミュートされていません。
+
+moderation.reports.none = 最近行われた通報はありません。
+
+moderation.reports.header = 最近の通報
+
+# {0} = player name
+moderation.reports.hover = 通報者\: {0}
+
+moderation.alts.header = Alt-アカウント
+
+# {0} = player name
+moderation.alts.noAlts = {0} のAltアカウントは存在しないか、オフラインになっています。
 
 # {0} = ip address (e.g. "1.2.3.4")
+moderation.ipBan.invalidIP = {0} は有効でないIPアドレスです
 
 # {0} = player name
+moderation.ipBan.banned = {0} は IP BANされました
 
 # {0} = player name or ip address (e.g. "Notch" or "1.2.3.4")
 # {1} = number of alternate accounts
+moderation.ipBan.bannedWithAlts = {0} は {1} 個のaltアカウントとともにIP BANされました
 
 # {0} = player name
+moderation.records.lookupNone = {0} はまだ処罰されていません。
 
+moderation.records.header = 処罰情報
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 moderation.records.reason = 理由\: {0}
 
 # {0} = player name
 # {1} = another player name
+moderation.similarIP.loginEvent = Banされている {1} のAltアカウントを検出\: {0}
 
 # {0} = player name
 # {1} = past duration (e.g. "5 minutes ago")
+moderation.similarIP.hover = 処罰者\:{0} {1} 前
 
 # {0} = player name
 moderation.freeze.freeze = あなたは、{0}を凍結しました。
@@ -71,34 +106,45 @@ moderation.freeze.freeze = あなたは、{0}を凍結しました。
 moderation.freeze.unfreeze = あなたは、凍結解除しました{0}
 
 # {0} = player name
+moderation.freeze.frozen = 凍結されています
 
 # {0} = player name
+moderation.freeze.unfrozen = 凍結を解除されました
 
 moderation.freeze.itemName = プレイヤー フリーザー
 
 moderation.freeze.itemDescription = 右クリックでプレイヤーをフリーズ/フリーズ解除することができます
 
+moderation.freeze.notEnabled = フリーズは有効になっていません。
 
 # {0} = player name
 moderation.freeze.exempt = {0} をフリーズすることはできません。
 
 # {0} = player name
+moderation.freeze.alreadyFrozen = {0} は現在凍結中です
 
 # {0} = player name
+moderation.freeze.alreadyThawed = {0} は現在凍結されていません
 
 # {0} = number of players
 # {1} = list of player names (e.g. "Alice, Bob, and Jerry")
+moderation.freeze.frozenList.online = 凍結されているプレイヤー ({0} 人)\: {1}
 
 # {0} = number of players
 # {1} = list of player names
+moderation.freeze.frozenList.offline = 凍結されているオフラインのプレイヤー ({0} 人)\: {1}
 
+moderation.freeze.frozenList.none = 凍結されているプレイヤーはいません！
 
 # {0} = staff player name
 # {1} = target player name
+moderation.freeze.broadcast.frozen = {0} は {1} を凍結しました
 
 # {0} = staff player name
 # {1} = target player name
+moderation.freeze.broadcast.thaw = {0} は {1} の凍結を解除しました
 
+moderation.freeze.broadcast.hover = クリックして元に戻す
 
 moderation.defuse.water = 水中のTNTは無効化できない場合があります。
 
@@ -116,19 +162,27 @@ moderation.defuse.player = {0}のTNTを無効化しました。
 # {0} = defuser player name
 # {1} = griefer player name
 # {2} = entity name
+moderation.defuse.alert.player = {0} が {1} の {2} を無効化しました
 
 # {0} = defuser player name
 # {1} = entity name
+moderation.defuse.alert.world = {0} が ワールドの {1} を無効化しました
 
 # {0} = reporter player name
 # {1} = accused player name
 # {2} = reason for report (e.g. "Is griefing my home")
+moderation.report.notify = 通報者\:{0} 対象者\: {1} 理由\: {2}
+moderation.report.acknowledge = その問題はまもなく処理されます。
 
 # {0} = number of seconds
 moderation.afk.warn = あなたは非アクティブのため {0} 秒後に切断されます
 
 moderation.afk.kick = 放置されていたため切断されました
 
+vanish.activate = Vanishしました\!
 
+vanish.deactivate = Vanishを解除しました\!
 
+vanish.chat.deny = Vanishしている間は管理者チャットのみ使用できます。
 
+vanish.hotbar = 現在Vanish中です
