Update Swedish translations

--- a/util/src/main/i18n/translations/moderation_sv_SE.properties
+++ b/util/src/main/i18n/translations/moderation_sv_SE.properties
@@ -144,6 +144,7 @@ moderation.freeze.broadcast.frozen = {0} har fryst {1}
 # {1} = target player name
 moderation.freeze.broadcast.thaw = {0} har ofryst {1}
 
+moderation.freeze.broadcast.hover = Klicka för att ångra åtgärden
 
 moderation.defuse.water = Du kan inte desarmera dynamit i vatten.
 
