Update Korean translations

--- a/util/src/main/i18n/translations/death_ko_KR.properties
+++ b/util/src/main/i18n/translations/death_ko_KR.properties
@@ -142,7 +142,7 @@ death.melee.player.mob = {0}이(가) {1}의 {3}에 의해 죽었습니다
 death.melee.player.mob.item = {0}이(가) {1}의 {3}의 {2}에 의해 죽었습니다
 
 # {0} = victim player name
-death.projectile = {0}이(가) 갈곳을 잃은 화살에 맞았습니다
+death.projectile = {0}이(가) 갈 곳을 잃은 화살에 맞았습니다
 
 # {0} = victim player name
 # {2} = projectile name (e.g. "Snowball")
@@ -219,7 +219,7 @@ death.explosive.player.distance = {0}이(가) {4} 블록 떨어진 곳에서 {1}
 # {0} = victim player name
 # {1} = killer player name
 # {2} = entity name (e.g. "Fireball")
-death.explosive.player.entity = {0}이(가) {1}의 {2}에 의해 폭발하였습니다
+death.explosive.player.entity = {0}이(가) {1}의 {2}에 의해 폭파당했습니다
 
 # {0} = victim player name
 # {1} = killer player name
@@ -230,7 +230,7 @@ death.explosive.player.entity.distance = {0}이(가) {4} 블록 떨어진 곳에
 # {0} = victim player name
 # {1} = killer player name
 # {3} = mob name (e.g. "Creeper")
-death.explosive.player.mob = {0}이(가) {1}의 {3}에 의해 폭발하였습니다
+death.explosive.player.mob = {0}이(가) {1}의 {3}에 의해 폭파당했습니다
 
 # {0} = victim player name
 # {1} = killer player name
@@ -512,17 +512,17 @@ death.fall.lava.projectile.player.mob.entity = {0}이(가) {1}의 {3}에게 {2}(
 death.fall.void.projectile.player.mob.entity = {0}이(가) {1}의 {3}에게 {2}(으)로 저격당해 세계 밖으로 떨어졌습니다
 
 # {0} = victim player name
-death.fall.ground.explosive = {0}이(가) 폭발에 의해 추락하였습니다.
+death.fall.ground.explosive = {0}이(가) 폭발으로 추락했습니다
 
 # {0} = victim player name
-death.fall.lava.explosive = {0}이(가) 폭발으로 용암에 빠졌습니다.
+death.fall.lava.explosive = {0}이(가) 폭발으로 용암에 빠졌습니다
 
 # {0} = victim player name
-death.fall.void.explosive = {0}이(가) 폭발으로 세계 밖으로 추락하였습니다.
+death.fall.void.explosive = {0}이(가) 폭발으로 세계 밖으로 추락했습니다
 
 # {0} = victim player name
 # {1} = killer player name
-death.fall.ground.explosive.player = {0}이(가) {2}에 의해 날아가 추락하였습니다
+death.fall.ground.explosive.player = {0}이(가) {1}의 폭파로 높은 곳에서 떨어졌습니다
 
 # {0} = victim player name
 # {1} = killer player name
@@ -530,12 +530,12 @@ death.fall.lava.explosive.player = {0}이(가) {1}에 의해 날아가 용암에
 
 # {0} = victim player name
 # {1} = killer player name
-death.fall.void.explosive.player = {0}이(가) {1}에 의해 폭발하여 세계 밖으로 추락하였습니다
+death.fall.void.explosive.player = {0}이(가) {1}의 폭파로 세계 밖으로 추락했습니다
 
 # {0} = victim player name
 # {1} = killer player name
 # {2} = explosive name (e.g. "TNT Minecart")
-death.fall.ground.explosive.player.entity = {0}이(가) {1}의 {2}에 의해 날아가 추락하였습니다
+death.fall.ground.explosive.player.entity = {0}이(가) {1}의 {2} 폭파로 높은 곳에서 떨어졌습니다
 
 # {0} = victim player name
 # {1} = killer player name
