Update Russian translations

--- a/util/src/main/i18n/translations/death_ru_RU.properties
+++ b/util/src/main/i18n/translations/death_ru_RU.properties
@@ -58,7 +58,7 @@ death.player.entity = {0} был убит {2} игрока {1}
 # {0} = victim player name
 # {1} = killer player name
 # {3} = mob name (e.g. "Creeper")
-death.player.mob = {0} был убит {3} {1}
+death.player.mob = {0} был убит {3} игрока {1}
 
 # {0} = victim player name
 death.magic = {0} был убит магией
@@ -74,7 +74,7 @@ death.magic.mob = {0} был убит магией {3}
 # {0} = victim player name
 # {2} = potion name (e.g. "Poison")
 # {3} = mob name (e.g. "Witch")
-death.magic.mob.potion = {0} был убит зельем {2} {3}
+death.magic.mob.potion = {0} был убит зельем {2} игрока {3}
 
 # {0} = victim player name
 # {1} = killer player name
@@ -83,12 +83,12 @@ death.magic.player = {0} был убит магией {1}
 # {0} = victim player name
 # {1} = killer player name
 # {2} = potion name (e.g. "Instant Damage")
-death.magic.player.potion = {0} был убит зельем {2} {1}
+death.magic.player.potion = {0} был убит зельем {1} игрока {2}
 
 # {0} = victim player name
 # {1} = killer player name
 # {3} = mob name (e.g. "Witch")
-death.magic.player.mob = {0} был убит магией {3} {1}
+death.magic.player.mob = {0} был убит магией {3} игрока {1}
 
 # {0} = victim player name
 # {1} = killer player name
