Update German translations

--- a/util/src/main/i18n/translations/death_de_DE.properties
+++ b/util/src/main/i18n/translations/death_de_DE.properties
@@ -146,7 +146,7 @@ death.projectile = {0} wurde durch einen verirrten Pfeil getroffen
 
 # {0} = victim player name
 # {2} = projectile name (e.g. "Snowball")
-death.projectile.entity = {0} wurde durch ein/e/en verirrte/s/en {2} getroffen
+death.projectile.entity = {0} wurde durch ein/e/en verirrte/s/n {2} getroffen
 
 # {0} = victim player name
 # {3} = mob name (e.g. "Skeleton")
