Update Japanese translations

--- a/util/src/main/i18n/translations/error_ja_JP.properties
+++ b/util/src/main/i18n/translations/error_ja_JP.properties
@@ -1,8 +1,12 @@
 # {0} = arbitrary user input
 # {1} = a value type (see translations "type.*", e.g. "duration", "whole number")
+error.invalidFormat = 不明な形式\: ''{0}'' は {1} ではありません。
 
 # {0} = numeric value
 # {1} = numeric range (e.g. "[1, 5)")
+error.outOfRange = 無効な値\: {0} が {1} と {1} の間にありません。
 
 # {0} = arbitrary user input
+error.suggestionSuffix = (もしかして ''{0}''?)
 
+error.unknown = 原因不明のエラーが発生しました。コンソールで詳細を確認してください。
