Update Korean translations

--- a/util/src/main/i18n/translations/command_ko_KR.properties
+++ b/util/src/main/i18n/translations/command_ko_KR.properties
@@ -67,7 +67,7 @@ command.simplePageHeader = {1}중 {0} 페이지
 command.invalidPage = {0} 페이지는 존재하지 않습니다. 페이지는 1부터 {1} 까지입니다.
 
 # {0} = number of players online
-command.list.online = 총 온라인(명)\: {0}
+command.list.online = 현재 접속자 수\: {0}
 
 command.list.teams = 팀\:
 
