Update Korean translations

--- a/util/src/main/i18n/translations/join_ko_KR.properties
+++ b/util/src/main/i18n/translations/join_ko_KR.properties
@@ -5,7 +5,7 @@ join.ok.queue = 참가 대기 인원에 들어갔습니다
 join.ok.dequeue = 참가 대기 인원에서 제외되었습니다
 
 # {0} = team name (e.g. "Red Team" or "Observers")
-join.ok.team = {0}에 참여하였습니다
+join.ok.team = {0}에 참여했습니다
 
 # {0} = team name (e.g. "Blue Team")
 join.ok.moved = 팀의 밸런스를 맞추기 위해 {0}(으)로 이동되었습니다
