Update Japanese translations

--- a/util/src/main/i18n/translations/gamemode_ja_JP.properties
+++ b/util/src/main/i18n/translations/gamemode_ja_JP.properties
@@ -1,67 +1,94 @@
 gamemode.generic.name = 試合
 
-gamemode.dtc.name = コアの破壊
+gamemode.dtc.name = Destroy the Core
 
-gamemode.dtm.name = モニュメントの破壊
+gamemode.dtm.name = Destroy the Monument
 
+gamemode.ctw.name = Capture The Wool
 
+gamemode.ctf.name = Capture the Flag
 
-gamemode.tdm.name = チームデスマッチ
+gamemode.tdm.name = Team Deathmatch
 
-gamemode.ad.name = 攻撃/防衛
+gamemode.ad.name = Attack/Defend
 
+gamemode.koth.name = King of the Hill
 
-gamemode.blitz.name = ブリッツ
+gamemode.blitz.name = Blitz
 
+gamemode.rage.name = Rage
 
-gamemode.scorebox.name = スコアボックス
+gamemode.scorebox.name = Scorebox
 
-gamemode.arcade.name = アーケード
+gamemode.arcade.name = Arcade
 
+gamemode.ffa.name = Free-for-all
 
-gamemode.mixed.name = 混合
+gamemode.mixed.name = Mixed
 
 gamemode.generic.acronym = 試合
 
+gamemode.dtc.acronym = DTC
 
+gamemode.dtm.acronym = DTM
 
+gamemode.ctw.acronym = CTW
 
+gamemode.ctf.acronym = CTF
 
+gamemode.tdm.acronym = TDM
 
+gamemode.ad.acronym = A/D
 
+gamemode.koth.acronym = KoTH
 
-gamemode.blitz.acronym = ブリッツ
+gamemode.blitz.acronym = Blitz
 
+gamemode.rage.acronym = Rage
 
 gamemode.scorebox.acronym = スコアボックス
 
-gamemode.arcade.acronym = アーケード
+gamemode.arcade.acronym = Arcade
 
+gamemode.ffa.acronym = FFA
 
-gamemode.mixed.acronym = 混合
+gamemode.mixed.acronym = Mixed
 
+objective.name.monument = モニュメント
 
+objective.name.antenna = アンテナ
 
+objective.name.orb = オーブ
 
+objective.name.inhibitor = 抑制器
 
+objective.name.tower = タワー
 
+objective.name.base = 拠点
 
+objective.name.ship = 船
 
+objective.name.core = コア
 
+objective.name.reactor = リアクター
 
+objective.name.engine = エンジン
 
 # {0} = objective mode (e.g. "Gold Core Mode")
 # {1} = time remaining (e.g. "30 seconds")
 objective.modeCountdown = {1} に {0} があります
 
 # Don't translate, keep as-is
+objective.credit.percentage = {0} ({1}%)
 
 objective.credit.etc = その他
 
 objective.credit.many = 多くのプレイヤー
 
+objective.credit.unknown = 原因不明の要因
 
 # {0} = objective name
+objective.credit.future = この目標が達成された時にあなたの名前が掲載されます。
 
 # TODO: Replace with objective.damageOwn, etc.
 destroyable.damageOwn = 自軍のモニュメントを破壊することはできません。
@@ -73,41 +100,54 @@ destroyable.repairDisabled = この目標を修復する事はできません。
 core.damageOwn = 自軍のコアを破壊することはできません。
 
 # {0} = objective name (e.g. "Left Core")
+objective.damageOwn = 自軍の {0} を破壊することはできません。
 
 # {0} = objective name
+objective.repairOther = 敵軍の {0} は修復出来ません
 
 # {0} = objective name
+objective.repairDisabled = 自軍の {0} を修復することは許可されていません
 
 # {0} = player name
 # {1} = monument name (e.g. "Monument A")
 # {2} = team name
+destroyable.complete.owned = {2} の {1} は {0} によって破壊されました
 
 # {0} = player name
 # {1} = monument name
+destroyable.complete = {1} は {0} によって破壊されました
 
 # {0} = player name
 # {1} = monument name
 # {2} = team name
+destroyable.touch.owned.player = {2} の {1} が {0} によって攻撃された。
 
 # {1} = monument name
 # {2} = team name
+destroyable.touch.owned.you = {2} の {1} を攻撃した。
 
 # {1} = monument name
 # {2} = team name
+destroyable.touch.owned = {2} の {1} がダメージを受けた
 
 # {0} = player name
 # {1} = monument name
+destroyable.touch.player = {2} の{1} が{0} によって攻撃された。
 
 # {1} = monument name
+destroyable.touch.you = {1} を攻撃した
 
 # {1} = monument name
+destroyable.touch = {1} が攻撃された
 
 # {0} = player name
 # {1} = core name (e.g. "Right Core")
 # {2} = team name
+core.complete.owned = {0} によって {2} の {1} が漏れ出した
 
 # {0} = player name
 # {1} = core name
+core.complete = {0} によって {1} が漏れ出した
 
 # {0} = player name
 # {1} = wool name (e.g "Red Wool")
@@ -116,13 +156,16 @@ wool.complete.owned = {0}が{1}の{2}を設置しました\!
 
 # {0} = player name
 # {1} = wool name
+wool.complete = {0} が {1} を設置した
 
 # {0} = player name
 # {1} = wool name
 # {2} = team name
+wool.touch.owned.player = {0} が {2} の {1} を入手した
 
 # {0} = player name
 # {1} = wool name
+wool.touch.player = {0} が {1} を入手した
 
 # {1} = wool name
 # {2} = team name
@@ -133,10 +176,13 @@ wool.touch.you = あなたは {1} を取得しました
 
 # {0} = team name
 # {1} = wool name
+wool.wrongTeam = ここには {0} のみが {1} を設置することが出来ます
 
 # {0} = wool name
+wool.wrongWool = ここに置けるのは {0} だけです
 
 # {0} = wool name
+wool.craftingDisabled = {0} をクラフトすることは出来ません。
 
 # {0} = flag name (e.g. "Green Flag")
 # {1} = player name
@@ -156,29 +202,36 @@ flag.capture.player = {1} が {0} を取得しました
 flag.capture.you = {0} を取得しました
 
 # {0} = flag name
+flag.captureDenied = 条件が満たされていない為 {0} は現在キャプチャー出来ません
 
 # {0} = flag name
+flag.return = {0} が戻ってきた
 
 # {0} = flag name
 # {1} = duration (e.g. "5 seconds")
+flag.willRespawn = {1} 秒後に {0} がリスポーンします
 
 # {0} = flag name
 # {1} = post name
 # {2} = duration
+flag.willRespawn.named = {0} は {1} に {2} 後にリスポーンします
 
 # {0} = flag name
 # {1} = post name
+flag.willRespawn.next = {0} は次に {1} にリスポーンします
 
 # {0} = flag name
 flag.respawn = {0} がリスポーンしました
 
 # {0} = flag name
+flag.respawnTogether = {0} は全ての旗がキャプチャーされた時にリスポーンします
 
 # {0} = flag name
 flag.carrying = あなたは {0} を運んでいます
 
 # {0} = flag name (being captured)
 # {1} = flag name (preventing capture)
+flag.captureDenied.byFlag = {1} が落ちた時 {0} はキャプチャーされます
 
 flag.cannotBreakFlag = 旗を破壊することはできません
 
@@ -187,12 +240,18 @@ flag.cannotBreakBlockUnder = フラグの下にあるブロックを破壊する
 # {0} = player name
 # {1} = number of points (e.g. "3 points")
 # {2} = team name
+scorebox.scored = {0} は {2} に {1} 得点した
 
 # {0} = number of player lives left (e.g. "2 lives")
 blitz.livesRemaining = 後{0}残っています。
 
 # {0} = "Blitz"
+blitz.joinDenied = {0} の試合中に参加することはできません。
 
+victoryCondition.blitz = 最も多くの生存者たち
 
+victoryCondition.goals = 最も多くのオブジェクト
 
+victoryCondition.tie = だれも勝ちませんでした
 
+victoryCondition.score = 最高スコア
