Update Korean translations

--- a/util/src/main/i18n/translations/gamemode_ko_KR.properties
+++ b/util/src/main/i18n/translations/gamemode_ko_KR.properties
@@ -12,7 +12,7 @@ gamemode.tdm.name = 팀 데스매치
 
 gamemode.ad.name = 공격/방어
 
-gamemode.koth.name = 언덕의 왕
+gamemode.koth.name = 고지 점령전
 
 gamemode.blitz.name = 전격전
 
@@ -152,11 +152,11 @@ core.complete = {1}의 내용물이 {0}에 의해 유출되었습니다
 # {0} = player name
 # {1} = wool name (e.g "Red Wool")
 # {2} = team name
-wool.complete.owned = {0}이(가) {2}을(를) 위해 {1}을(를) 설치하였습니다
+wool.complete.owned = {0}이(가) {2}을(를) 위해 {1}을(를) 설치했습니다
 
 # {0} = player name
 # {1} = wool name
-wool.complete = {0}이(가) {1}을(를) 설치하였습니다
+wool.complete = {0}이(가) {1}을(를) 설치했습니다
 
 # {0} = player name
 # {1} = wool name
@@ -196,7 +196,7 @@ flag.drop = {0}가 떨어졌습니다
 
 # {0} = flag name
 # {1} = player name
-flag.capture.player = {0}이(가) {1}에 의해 점령했습니다
+flag.capture.player = {0}이(가) {1}에 의해 점령되었습니다
 
 # {0} = flag name
 flag.capture.you = {0}을(를) 점령했습니다
