--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -197,6 +197,10 @@ misc.serverFull = Server is full, consider upgrading to premium to be able to jo
 
 misc.serverRestart = Server restarting!
 
+misc.increase = increased
+
+misc.decrease = decreased
+
 type.int = whole number
 
 type.float = decimal number
