Use a better key for time adjust broadcast
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -153,7 +153,8 @@ match.timeLimit.result = {1} after {0}
 match.timeLimit.commandOutput = The time limit is {0} with the result {1}
 
 # {0} = increase or decreased
-match.timeLimit.increase = The time limit has been {0} by {1}
+# {1} = duration
+match.timeLimit.adjust = The time limit has been {0} by {1}
 
 broadcast.go = Go!
 
