Change message for spectators when player is dead
Signed-off-by: KingSimon <19822231+KingOfSquares@users.noreply.github.com>

--- a/util/src/main/i18n/templates/death.properties
+++ b/util/src/main/i18n/templates/death.properties
@@ -671,3 +671,14 @@ death.respawn.confirmed.time = Respawning in {0}s
 death.respawn.confirmed.waiting = You will respawn as soon as possible...
 
 death.respawn.confirmed.waiting.flagDropped = You will respawn when the flag is dropped...
+
+# {0} = A player name
+deathScreen.title.spectator = {0} died!
+
+death.respawn.unconfirmed.spectator = They can left click to respawn
+
+death.respawn.unconfirmed.time.spectator = They can respawn in {0}s
+
+death.respawn.confirmed.waiting.spectator = They will respawn as soon as possible...
+
+death.respawn.confirmed.waiting.flagDropped.spectator = They will respawn when the flag is dropped...
