--- a/util/src/main/i18n/translations/match_ko_KR.properties
+++ b/util/src/main/i18n/translations/match_ko_KR.properties
@@ -56,6 +56,12 @@ match.stats = 킬\: {0} | 연속 킬\: {1} | 데스\: {2} | 킬뎃 비율\: {3}
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
 match.stats.concise = 킬\: {0} 데스\: {1} 킬뎃 비율\: {2}
 
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 match.stats.kills = 킬량\: {1} - {0}
