--- a/util/src/main/i18n/translations/match_no_NO.properties
+++ b/util/src/main/i18n/translations/match_no_NO.properties
@@ -55,6 +55,12 @@ match.stats = Kills\: {0} | Killstreak\: {1} | Dødsfall\: {2} | K/D\: {3}
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
 
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 match.stats.kills = Kills\: {1} by {0}
