--- a/util/src/main/i18n/translations/match_sv_SE.properties
+++ b/util/src/main/i18n/translations/match_sv_SE.properties
@@ -56,6 +56,12 @@ match.stats = Dödsantal\: {0}  |  Dödslänga\: {1}  |  Dödsfall\: {2}  |  K/D
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
 match.stats.concise = Dödat\: {0}  Dött\: {1}  K/D\: {2}
 
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 match.stats.kills = Dödade\: {1} av {0}
