Update Italian translations

--- a/util/src/main/i18n/translations/match_it_IT.properties
+++ b/util/src/main/i18n/translations/match_it_IT.properties
@@ -1,6 +1,8 @@
 match.title = Partita
 
+match.name = partita
 
+match.name.plural = partite
 
 match.info.time = Tempo
 
@@ -10,16 +12,21 @@ match.info.players = Giocatori
 
 match.info.observers = Spettatori
 
+match.info.score = Punti
 
+match.info.you = Tu
 # {0} = team name
 match.balanceTeams = Le squadre saranno equilibrate automaticamente se {0} rimane in sovrannumero
 
+match.maxBuildHeight = Hai raggiunto l'altezza massima di costruzione
 
 match.outOfBounds = Non puoi lasciare il campo di gioco
 
 match.laneExit = Sei uscito dalla tua corsia
 
+match.disabled.enderChest = Le encderchest sono disabilitate
 
+match.disabled.bed = I letti sono disabilitati
 
 match.class.title = Classi
 
@@ -42,48 +49,72 @@ match.class.notFound = Non si è trovata nessuna classe con questi criteri.
 # {1} = number of consecutive kills
 # {2} = number of deaths
 # {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats = Uccisioni\: {0}  | Killstreak\: {1}  | Morti\: {2}  | K/D\: {3}
 
 # {0} = number of kills
 # {1} = number of deaths
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
+match.stats.concise = Uccisioni\: {0}  Morti\: {1}  K/D\: {2}
+
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
 
 # {0} = a player name
 # {1} = an amount of kills(number)
+match.stats.kills = Uccisioni\: {1} di {0}
 
 # {0} = a player name
 # {1} = a killstreak(number)
+match.stats.killstreak = Killstreak\: {1} di {0}
 
 # {0} = a killstreak(number)
+match.stats.killstreak.concise = Miglior Killstreak\: {0}
 
 # {0} = a player name
 # {1} = an amount of deaths(number)
+match.stats.deaths = Morti\: {1} di {0}
 
 # {0} = a player name
 # {1} = an amount of blocks
+match.stats.bowshot = Colpo più lungo\: {1} da {0} blocchi
 
 # {0} = a player name
 # {1} = an amount of damage
+match.stats.damage = Danno\: {1} di {0}
 
 # {0} = an amount of damage
 # {1} = an amount of damage
+match.stats.damage.dealt = Danno (Arco)\: {0} ({1})
 
 # {0} = an amount of damage
+match.stats.damage.received = Danno Ricevuto\: {0}
 
 # {0} = number of arrows hit
 # {1} = number of arrows shot
 # {2} = accuracy represented as a percentage
+match.stats.bow = Colpi di Arco\: {0} / {1} ({2})
 
 
 # {0} = the number of flags captured
+match.stats.flagsCaptured.concise = Bandiere catturate\: {0}
 
 # {0} = a number representing the duration of the capture
+match.stats.flaghold.concise = Presa di Bandiera più lunga\: {0}
 
 # {0} the amount of monument pieces broken(number)
+match.stats.broken.concise = Blocchi di Monumenti Rotti\: {0}
 
 # {0} = a player name
+match.stats.team = Statistiche di {0}
 
+match.stats.title = Statistiche Partita
 
+match.stats.you = Le Tue Statistiche
 
+match.stats.disabled = Hai disabilitato le statistiche della partita
 
 # {0} = team name (e.g. "Red Team")
 match.myTeam = Sei nella squadra {0}
@@ -103,9 +134,11 @@ match.alias.err = La squadra con il nome {0} esiste già.
 
 # {0} = team name (e.g. "Green Team")
 # {1} = max number of players
+match.resize.max = {0} ora ha una dimensione massima di {1} giocatori
 
 # {0} = team name (e.g. "Green Team")
 # {1} = min number of players
+match.resize.min = {0} ora ha una dimensione minima di {1} giocatori
 
 # {0} = duration in colon format (e.g. "13:37" for 13 minutes and 37 seconds left)
 match.timeLimit.generic = la partita finisce in {0}
@@ -124,6 +157,8 @@ broadcast.matchStart = La partita è cominciata\!
 
 broadcast.startCancel = L'inizio della partita è stato annullato
 
+broadcast.overtime = Overtime\! The timer will start after the tie is broken
+broadcast.overtime.limit = Se non c''è nessun vincitore dopo {0}, la partita sarà annullata.
 
 broadcast.gameOver = Partita finita\!
 
@@ -146,6 +181,7 @@ countdown.huddleEnd = La consultazione di squadra finisce tra {0}
 # {0} = duration
 countdown.restart = Il server riavvia fra {0}
 
+admin.reloadConfig = Configurazione ricaricata
 
 admin.cancelCountdowns = Tutti i conti alla rovescia sono stati annullati.
 
@@ -173,4 +209,5 @@ admin.start.unknownState = La partita non può iniziare in questo momento.
 
 admin.end.unknownError = La partita non può finire in questo momento.
 
+admin.setPool.activeCycle = Non puoi effettuare il comando durante il cambio mappa.
 
