--- a/util/src/main/i18n/translations/match_lol_US.properties
+++ b/util/src/main/i18n/translations/match_lol_US.properties
@@ -56,6 +56,12 @@ match.stats = KILLD\: {0} | KATStraek\: {1} | Deds\: {2} | KAT/D {3}
 # {2} = numbers of kills divided by the number of deaths (kill-death ratio)
 match.stats.concise = kilzz\: {0} ded\: {1} KAT/D\: {2}
 
+# {0} = number of kills
+# {1} = number of consecutive kills
+# {2} = number of deaths
+# {3} = numbers of kills divided by the number of deaths (kill-death ratio)
+# {4} = an amount of damage
+
 # {0} = a player name
 # {1} = an amount of kills(number)
 match.stats.kills = Killz {1} bai {0}
