--- a/util/src/main/i18n/translations/misc_fr_FR.properties
+++ b/util/src/main/i18n/translations/misc_fr_FR.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0}, et {1}
 
 # {0} = "1"
-misc.millisecond = {0} milliseconde
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} millisecondes
-
-# {0} = "1"
 misc.second = {0} seconde
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} secondes
 # {0} = "1"
 misc.minute = {0} minute
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minutes
 
 # {0} = "1"
 misc.hour = {0} heure
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} heures
 
 # {0} = "1"
 misc.day = {0} jour
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} jours
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = il y a {0}
@@ -143,6 +153,7 @@ misc.left = Gauche
 misc.right = Droite
 
 misc.center = Centre
+
 
 misc.north = Nord
 
