Update Afrikaans translations

--- a/util/src/main/i18n/translations/misc_af_ZA.properties
+++ b/util/src/main/i18n/translations/misc_af_ZA.properties
@@ -17,12 +17,6 @@ misc.list.pair = {0} en {1}
 misc.list.end = {0}, en {1}
 
 # {0} = "1"
-misc.millisecond = {0} millisekonde
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} millisekondes
-
-# {0} = "1"
 misc.second = {0} tweede
 
 # {0} = number of seconds
@@ -31,20 +25,36 @@ misc.seconds = {0} sekondes
 # {0} = "1"
 misc.minute = {0} minuut
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minute
 
 # {0} = "1"
 misc.hour = {0} uur
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} uur
 
 # {0} = "1"
 misc.day = {0} dag
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} dae
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = {0} gelede
@@ -110,6 +120,7 @@ misc.noPermission = U het nie toestemming het.
 misc.alert = Versigtigheid
 
 misc.warning = WAARSKUWING
+
 
 
 
