Update Arabic translations

--- a/util/src/main/i18n/translations/misc_ar_SA.properties
+++ b/util/src/main/i18n/translations/misc_ar_SA.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}، {1}
 misc.list.end = {0}، و {1}
 
 # {0} = "1"
-misc.millisecond = {0} جزء من الألف من الثانية
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} جزء من الألف من الثانية
-
-# {0} = "1"
 misc.second = ثانية {0}
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} ثانية
 # {0} = "1"
 misc.minute = {0} دقيقة
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} دقائق
 
 # {0} = "1"
 misc.hour = {0} ساعة
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} ساعات
 
 # {0} = "1"
 misc.day = {0} أيام
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} أيام
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = قبل {0}
@@ -113,6 +123,7 @@ misc.tip = نصيحة
 misc.alert = تنبيه
 
 misc.warning = تحذير
+
 
 
 
