Update Catalan translations

--- a/util/src/main/i18n/translations/misc_ca_ES.properties
+++ b/util/src/main/i18n/translations/misc_ca_ES.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0}, i {1}
 
 # {0} = "1"
-misc.millisecond = {0} mil·lisegon
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} mil·lisegons
-
-# {0} = "1"
 misc.second = {0} segon
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} segons
 # {0} = "1"
 misc.minute = {0} minut
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} minuts
 
 # {0} = "1"
 misc.hour = {0} hora
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} hores
 
 # {0} = "1"
 misc.day = {0} dia
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} dies
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = fa {0}
@@ -116,6 +126,7 @@ misc.tip = Consell
 misc.alert = Alerta
 
 misc.warning = ADVERTÈNCIA
+
 
 
 
