--- a/util/src/main/i18n/translations/misc_de_DE.properties
+++ b/util/src/main/i18n/translations/misc_de_DE.properties
@@ -19,12 +19,6 @@ misc.list.middle = {0}, {1}
 misc.list.end = {0}, und {1}
 
 # {0} = "1"
-misc.millisecond = {0} Millisekunde
-
-# {0} = number of milliseconds
-misc.milliseconds = {0} Millisekunden
-
-# {0} = "1"
 misc.second = {0} Sekunde
 
 # {0} = number of seconds
@@ -33,20 +27,36 @@ misc.seconds = {0} Sekunden
 # {0} = "1"
 misc.minute = {0} Minute
 
-# {0} = number of minutes
+# {0} = number of minutes (2-59)
 misc.minutes = {0} Minuten
 
 # {0} = "1"
 misc.hour = {0} Stunde
 
-# {0} = number of hours
+# {0} = number of hours (2-23)
 misc.hours = {0} Stunden
 
 # {0} = "1"
 misc.day = {0} Tag
 
-# {0} = number of days
+# {0} = number of days (2-29)
 misc.days = {0} Tage
+
+# {0} = "1"
+
+# {0} = number of weeks (2-3)
+
+# {0} = "1"
+
+# {0} = number of months (2-11)
+
+# {0} = "1"
+
+# {0} = number of years
+
+# less than a second
+
+# more than 3 years
 
 # {0} = duration (e.g. "4 hours")
 misc.timeAgo = vor {0}
@@ -143,6 +153,7 @@ misc.left = Links
 misc.right = Rechts
 
 misc.center = Mittig
+
 
 misc.north = Nördlich
 
